[gd_scene load_steps=4 format=3 uid="uid://drxbg7oejieeo"]

[ext_resource type="Theme" uid="uid://1j0qm0ylmms6" path="res://resources/default_theme.tres" id="1_tjpdc"]
[ext_resource type="Script" path="res://scenes/menu/Menu.gd" id="1_w83ne"]
[ext_resource type="Texture2D" uid="uid://bd5r6l08xe868" path="res://resources/logo.png" id="2_kdst2"]

[node name="Menu" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tjpdc")
color = Color(0.0784314, 0.203922, 0.643137, 1)
script = ExtResource("1_w83ne")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="HSplitContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "MENU_TITLE"

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="Continue" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/MenuOptions"]
unique_name_in_owner = true
layout_mode = 2
text = "MENU_CONTINUE"

[node name="New Game" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
text = "MENU_NEW_GAME"

[node name="Options" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
text = "MENU_OPTIONS"

[node name="Stats" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
text = "MENU_STATS"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Image" type="TextureRect" parent="MarginContainer/HSplitContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("2_kdst2")

[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/MenuOptions/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/MenuOptions/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/MenuOptions/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/MenuOptions/Stats" to="." method="_on_stats_pressed"]
